<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activities.AddGameActivity">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spReferees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8"
            android:minHeight="@dimen/size_48"
            android:padding="@dimen/size_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spFirstTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8"
            android:minHeight="@dimen/size_48"
            android:padding="@dimen/size_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spReferees" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spSecondTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8"
            android:minHeight="@dimen/size_48"
            android:padding="@dimen/size_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spFirstTeam" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/size_8"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/select_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spSecondTeam" />

        <LinearLayout
            android:id="@+id/linearLayoutTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDate">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/size_8"
                android:layout_weight="1"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hour"
                    android:inputType="number"
                    android:maxLength="2" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvColon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/size_8"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/colon"
                android:textSize="@dimen/text_size_32" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMinute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/size_8"
                android:layout_weight="1"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMinute"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/minute"
                    android:inputType="number"
                    android:maxLength="2" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddGame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_16"
            android:padding="@dimen/size_16"
            android:text="@string/add_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTime" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
