<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayoutGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/size_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStartTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textAlignment="textStart"
            tools:text="0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHostTeamName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvColon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/size_8"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/colon"
            android:textSize="@dimen/text_size_16" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGuestTeamName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@{game.getGuestFootballTeam().name}"
            android:textAlignment="center" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRefereeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8"
        app:layout_constraintBottom_toBottomOf="@+id/btnLocationOfGame"
        app:layout_constraintEnd_toStartOf="@+id/btnLocationOfGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnLocationOfGame" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        android:text="@string/delete_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutGame" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLocationOfGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        android:text="@string/location"
        app:layout_constraintBottom_toBottomOf="@+id/btnDeleteGame"
        app:layout_constraintEnd_toStartOf="@id/btnDeleteGame"
        app:layout_constraintTop_toTopOf="@id/btnDeleteGame" />


</androidx.constraintlayout.widget.ConstraintLayout>
